@@ -1,4 +1,4 @@
-Tutorial for installing and configurating the Yii User Management 
+Tutorial for installing and configuring the Yii User Management 
 Module under a fresh skeleton Application generated by yiic
 
 Installing the User Management Module is very easy due to the
@@ -33,11 +33,6 @@ Add these lines:
 
 	'modules' => array(
 		'user' => array(
-			'modules' => array(
-				'role',
-				'profiles',
-				'messages',
-				),
       'debug' => true,
 			)
 		),
